# gr-tutorial

./: CMakeLists.txt  LICENCE  README.md
docs/: README.tutorial
docs/doxygen/: Doxyfile.in
examples/: CMakeLists.txt  README  mpsk_rrc_rolloff.grc  symbol_differntial_filter.grc
examples/tutorial2/: CMakeLists.txt
examples/tutorial2/grc_files/: tutorial_two_1.grc  tutorial_two_2.grc  tutorial_two_3.grc  tutorial_two_4.grc  tutorial_two_5.grc  tutorial_two_6.grc  tutorial_two_7.grc  untitled.grc
examples/tutorial3/: CMakeLists.txt
examples/tutorial3/grc_files/: if_else.grc  tutorial_three_1.grc  tutorial_three_2.grc  tutorial_three_3.grc  tutorial_three_4.grc
examples/tutorial3/python/: hello_world.py  if_else.py  if_else_mod.py  tutorial_three_1.py
examples/tutorial4/: CMakeLists.txt  my_qpsk_demod.grc
examples/tutorial5/: CMakeLists.txt  chat_app.grc  demod_with_tags.grc  tags_decim.grc  tags_interp.grc  tags_ramp_delay.grc  tags_simple_example.grc
examples/tutorial6/: CMakeLists.txt  gr-tutorial-broadcast-fm-rx.grc  gr-tutorial-qpsk-tx-uhd.grc  gr-tutorial-qpsk-tx.grc  gr-tutorial-simple-spec-an.grc
examples/tutorial7/: CMakeLists.txt  mpsk_rrc_rolloff.grc  mpsk_stage1.grc  mpsk_stage2.grc  mpsk_stage3.grc  mpsk_stage4.grc  mpsk_stage5.grc  mpsk_stage6.grc  multipath_sim.grc  symbol_differential_filter_phases.grc  symbol_sampling.grc  symbol_sampling_diff.grc
grc/: CMakeLists.txt  my_qpsk_demod.grc  top_block.py  tutorial_chat_receiver.xml  tutorial_chat_sanitizer.xml  tutorial_multiply_py_ff.xml  tutorial_my_qpsk_demod_cb.xml  tutorial_my_qpsk_demod_tags_cb.xml  tutorial_qpsk_demod_py_cb.xml
include/tutorial/: CMakeLists.txt  api.h  my_qpsk_demod_cb.h  my_qpsk_demod_tags_cb.h
lib/: CMakeLists.txt  my_qpsk_demod_cb_impl.cc  my_qpsk_demod_cb_impl.h  my_qpsk_demod_tags_cb_impl.cc  my_qpsk_demod_tags_cb_impl.h  qa_tutorial.cc  qa_tutorial.h  test_tutorial.cc
python/: CMakeLists.txt  __init__.py  chat_blocks.py  multiply_py_ff.py  qa_chat_sanitizer.py  qa_multiply_py_ff.py  qa_qpsk_demod.py  qa_qpsk_demod_py_cb.py  qpsk_demod_py_cb.py
python/.unittests/python/: qa_multiply_py_ff.xml  qa_qpsk_demod_py_cb.xml
swig/: CMakeLists.txt  tutorial_swig.i
