
install(
    FILES
    README
    DESTINATION ${GR_PKG_TUTORIALS_EXAMPLES_DIR}
    COMPONENT "tutorials_python"
)

########################################################################
# Add subdirectories
########################################################################
add_subdirectory(tutorial2)
add_subdirectory(tutorial3)
add_subdirectory(tutorial4)
add_subdirectory(tutorial5)
add_subdirectory(tutorial6)
add_subdirectory(tutorial7)
