########################################################################
# Install example files into examples/tutorials/tutorial2
########################################################################

install(
    FILES
    DESTINATION ${GR_PKG_TUTORIALS_EXAMPLES_DIR}/tutorial2
    COMPONENT "tutorials_python"
)
