########################################################################
# Install example files into examples/tutorials/tutorial3
########################################################################

install(
    FILES
    DESTINATION ${GR_PKG_TUTORIALS_EXAMPLES_DIR}/tutorial3
    COMPONENT "tutorials_python"
)
