########################################################################
# Install example files into examples/tutorials/tutorial4
########################################################################

install(
    FILES
    DESTINATION ${GR_PKG_TUTORIALS_EXAMPLES_DIR}/tutorial4
    COMPONENT "tutorials_python"
)
