########################################################################
# Install example files into examples/tutorials/tutorial5
########################################################################

install(
    FILES
    DESTINATION ${GR_PKG_TUTORIALS_EXAMPLES_DIR}/tutorial5
    COMPONENT "tutorials_python"
)
