########################################################################
# Install example files into examples/tutorials/tutorial6
########################################################################

install(
    FILES
    DESTINATION ${GR_PKG_TUTORIALS_EXAMPLES_DIR}/tutorial6
    COMPONENT "tutorials_python"
)
